[project]
name = "amex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "openpyxl>=3.1.5",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-instrumentation-logging>=0.62b1",
    "opentelemetry-sdk>=1.41.1",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.9",
    "psycopg2-binary>=2.9.12",
    "python-multipart>=0.0.27",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.43.0",
]
